# time_stamper

./: .gitignore  README.md  dependencies.rosinstall
kernelmodule/: README.md
kernelmodule/src/: time_stamper.c
src/: Makefile  time_stamper.c
time_stamper_cv/: .gitignore  CMakeLists.txt  README.md  package.xml
time_stamper_cv/config/: camchain-2022-03-15-16-17-06.yaml  camera_config  camera_dark.yaml
time_stamper_cv/docs/: DependencyGraph.puml
time_stamper_cv/include/: Calibration.h  Common.h  Configuration.h  ConvexShape.h  Detector.h  LedDetectionNode.h  LedParser.h  Node.h  ShapeValidation.h  Trigonometry.h  common.h  configuration.h  convex_shape.h  detector.h  image_processor.h  keypoint_detector.h  led_detection_node.h  led_parser.h  led_state_parser.h  trigonometry.h
time_stamper_cv/launch/: time_stamper_cv.launch  time_stamper_cv_debug.launch  time_stamper_cv_rosbag.launch
time_stamper_cv/msg/: Ledstate.msg
time_stamper_cv/src/: BlobDetectionTest.cpp  Calibration.cpp  ConvexShape.cpp  Detector.cpp  LedDetectionNode.cpp  LedParser.cpp  Main.cpp  Node.cpp  ShapeValidation.cpp  Trigonometry.cpp  convex_shape.cpp  detector.cpp  image_processor.cpp  keypoint_detector.cpp  led_detection_node.cpp  led_parser.cpp  led_state_parser.cpp  main.cpp  trigonometry.cpp
time_stamper_cv/test/: test_algorithms.cc  test_convex_shape.cc  test_led_parser.cc  test_shape_validation.cc  test_trigonometry.cc
time_stamper_ptp/: CMakeLists.txt  package.xml
time_stamper_ptp/src/: Main.cpp
time_stamper_ros/: CMakeLists.txt  package.xml
time_stamper_ros/cfg/: Led.cfg
time_stamper_ros/include/: Filesystem.h  IFileSystem.h  IPwmSubsystem.h  ISysfsSubsystem.h  Node.h  SysfsGpio.h  SysfsPwm.h  TimestampManager.h
time_stamper_ros/include/sysfs/: IGpioSubsystem.h  IPwmSubsystem.h  ISysfsSubsystem.h  SysfsGpio.h  SysfsPwm.h
time_stamper_ros/launch/: time_stamper_default.launch
time_stamper_ros/msg/: Timestamp.msg
time_stamper_ros/src/: Filesystem.cpp  Main.cpp  Node.cpp  SysfsGpio.cpp  SysfsPwm.cpp  TimestampManager.cpp
time_stamper_ros/src/sysfs/: SysfsGpio.cpp  SysfsPwm.cpp
time_stamper_ros/test/: test_mock_pwm_subsystem.cc
time_stamper_ros/test/Mocks/: MockFilesystem.h  MockGpioSubsystem.h  MockPwmSubsystem.h
time_stamper_ros/test/Tests/: test_entry_point.cc  test_mock_filesystem.cc  test_mock_gpio_subsystem.cc  test_mock_pwm_subsystem.cc
