<?xml version="1.0"?>
<package format="2">
  <name>time_stamper_ptp</name>
  <version>0.0.0</version>
  <description>The time_stamper_ptp package</description>
  <maintainer email="todo@todo.todo">4c3y</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
