<?xml version="1.0"?>
<package format="2">
  <name>time_stamper_ros</name>
  <version>0.0.0</version>
  <description>The time_stamper_ros package</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin_simple</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
